fixed layout issues

--- a/my-website/src/components/general.module.css
+++ b/my-website/src/components/general.module.css
@@ -2,7 +2,8 @@
     background-color: rgb(33, 33, 33);
     font: 1.3rem Inconsolata, monospace;
     color: white;
-    width: 1480px;
+    width: 100%;
+    /* width: 1480px; */
 }
 
 .welcome_area{
@@ -34,14 +35,15 @@ display: none;
 background-color: rgb(33, 33, 33);
 display: flex;
 /* width: "full"; */
-width: 1480px;
-
+/* width: 1480px; */
+width: 100%;
+height: 100%;
 overflow-y: 'auto';
-scroll-behavior: auto;
+scroll-behavior: 'smooth';
 
 align-items: center;
 justify-content: center;
-overflow: hidden;
+/* overflow: hidden; */
 }
 
 .mainPage2::-webkit-scrollbar {
