--- a/my-website/src/components/resume.module.css
+++ b/my-website/src/components/resume.module.css
@@ -38,6 +38,7 @@ border-color:  rgb(255, 203, 71);
 border-width: 2px;
 color: rgb(255, 203, 71);
 transition: 0.3s;
+margin: 5px;
 }
 
 
@@ -61,6 +62,7 @@ border-width: 2px;
 color: whitesmoke;
 padding: 5px;
 transition: 0.3s;
+margin: 5px;
 }
 
 .languages:hover{
@@ -84,7 +86,7 @@ transition: 0.3s;
 .classes {
     background-color: rgb(59, 59, 59);
     height: 150px;
-    /* width: 150px; */
+    width: 150px;
     color: thistle;
     border-radius: 5px;
     padding: 2px 2px 2px 2px;
@@ -107,6 +109,7 @@ transition: 0.3s;
     color: tomato;
     padding: 10px 10px 10px 10px;
     transition: 0.3s;
+    margin: 5px;
     }
 
 .experiences:hover{
@@ -114,7 +117,7 @@ transition: 0.3s;
 }
 
 .exp_when{
-    font-size: 18px;
+    font-size: 15px;
     padding-top: 4px;
     padding-left: 20px
 }
@@ -141,6 +144,7 @@ transition: 0.3s;
     /* min-height: 30px;  */
     color: peru;
     padding: 10px 10px 10px 10px;
+    width: 200px;
     /* max-width: 200px; */
     }
 
@@ -170,7 +174,8 @@ transition: 0.3s;
     display: flex;
     padding: 10px 10px 10px 10px;
     font: 1.3rem Inconsolata, monospace;
-    width: 300px;
+    width: 100%;
+    /* width: 300px; */
     }
 
 /* 
@@ -178,45 +183,48 @@ color: turquoise; */
     
 .so_name{
     font-size: 24px;
-    color: rgb(122, 134, 243);
-    /* color: rgb(201, 148, 255); */
+    color: lightcoral;
 }
 
 .so_grade{
     font-size: 16px;
-    color: rgb(122, 134, 243);
+    color: lightcoral;
     margin-bottom: 10px;
 }
 
 .so_gpa{
     margin-top: -1px;
     font-size: 18px;
-    color: rgb(122, 134, 243);
+    color: lightcoral;
 }
 
 .so_comment{
     height: 50px;
     width: 100%;
-    border: 1px dotted rgb(122, 134, 243);
+    border: 1px dotted lightcoral;
     /* width: 380px; */
     background-color: transparent;
-    color: rgb(122, 134, 243);
+    color: lightcoral;
 }
 
 .so_drop{
     height: 100%;
-    border: 1px dotted rgb(122, 134, 243);
-    vertical-align: center;
-    text-align: center;
+    width: 100%;
+    border: 2px dotted lightcoral;    
+    
     font-size: 35px;
     margin-top: 10px;
     margin-bottom: 10px;
     transition: 0.3s;
-    color: rgb(122, 134, 243);
+    color: lightcoral;
+
+    display: flex;
+    justify-content: center;
 }
 
 .so_drop:hover{
-    border-color: rgb(255, 255, 255);
+    border: 2px dotted rgb(255, 255, 255);;
+    /* border-color: rgb(255, 255, 255); */
     color: rgb(255, 255, 255);
 }
 
@@ -230,7 +238,7 @@ color: turquoise; */
     margin: 10px 0px 0px 0px;
     width: 100%;
     justify-content: center;
-    color: rgb(122, 134, 243);
+    color: lightcoral;
     
 }
 
@@ -247,7 +255,7 @@ color: turquoise; */
 
 .legend_skills {
     background-color:  rgb(59, 59, 59);
-    min-height: 30px; 
+    
     font-size: 15px;
     text-align: center;
     border-radius: 10px;
@@ -261,7 +269,6 @@ color: turquoise; */
 .legend_languages {
 background-color: rgb(59, 59, 59);
 font-size: 15px;
-min-height: 30px; 
 text-align: center;
 border-radius: 10px;
 border-color: white;
